# mangaTools

./: main.py  mangaDownloader.py  mangaSplitter.py  pyproject.toml
static/: index.css  style.css
templates/: index.html  list.html
